@@ -80,9 +80,7 @@ build packages using RPM.
 %package python
 Summary: Python bindings for apps which will manipulate RPM packages.
 Group: Development/Libraries
-BuildRequires: popt >= 1.5
 Requires: rpm = %{version}
-Requires: popt >= 1.5
 Requires: python >= 1.5.2
 
 %description python
@@ -223,7 +221,6 @@ fi
 %endif
 
 %define	rpmattr		%attr(0755, @RPMUSER@, @RPMGROUP@)
-%define	rpmdbattr	%rpmattr %ghost %config(missingok)
 
 %files
 %defattr(-,root,root)
@@ -236,6 +233,8 @@ fi
 %dir				/etc/rpm
 %config(noreplace,missingok)	/etc/rpm/macros.db1
 %attr(0755, @RPMUSER@, @RPMGROUP@)	%dir /var/lib/rpm
+
+%define	rpmdbattr %attr(0644, @RPMUSER@, @RPMGROUP@) %verify(not md5 size mtime) %ghost %config(missingok)
 %rpmdbattr	/var/lib/rpm/Basenames
 %rpmdbattr	/var/lib/rpm/Conflictname
 %rpmdbattr	/var/lib/rpm/__db.001
@@ -251,6 +250,7 @@ fi
 %rpmdbattr	/var/lib/rpm/Requirename
 %rpmdbattr	/var/lib/rpm/Requireversion
 %rpmdbattr	/var/lib/rpm/Triggername
+
 %endif
 
 %rpmattr	%{__prefix}/bin/rpm2cpio
